build: update env

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build --dotenv .env.production",
-    "dev": "nuxt dev --dotenv .env",
-    "generate": "nuxt generate --dotenv .env.production",
-    "preview": "nuxt preview --dotenv .env.production",
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint:eslint": "eslint --ext .js,.ts,.vue,.jsx,.tsx .",
     "lint:prettier": "prettier --write --loglevel warn \"**/*.{js,ts,json,jsx,tsx,css,less,scss,vue,html,md}\"",
