--- a/package.json
+++ b/package.json
@@ -19,39 +19,38 @@
     "node": ">=20.0.0",
     "pnpm": ">=8.14.0"
   },
-  "devDependencies": {
-    "@element-plus/nuxt": "^1.0.7",
+  "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "@nuxt/image": "^1.3.0",
+    "@nuxt/ui": "^2.12.3",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/supabase": "^1.1.5",
-    "@nuxtjs/tailwindcss": "^6.11.0",
-    "@popperjs/core": "npm:@sxzz/popperjs-es@^2.11.7",
+    "dayjs": "^1.11.10",
+    "vue": "^3.4.15",
+    "vue-router": "^4.2.5",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
     "@types/node": "^20.11.5",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "dayjs": "^1.11.10",
-    "element-plus": "^2.5.2",
     "eslint": "^8.56.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.20.1",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
     "nuxt": "^3.9.3",
-    "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "sass": "^1.70.0",
-    "vue": "^3.4.15",
-    "vue-eslint-parser": "^9.4.0",
-    "vue-router": "^4.2.5"
+    "vue-eslint-parser": "^9.4.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,vue}": [
