--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint:eslint": "eslint --ext .js,.ts,.vue,.jsx,.tsx .",
     "lint:prettier": "prettier --write --loglevel warn \"**/*.{js,ts,json,jsx,tsx,css,less,scss,vue,html,md}\"",
     "lint:lint-staged": "lint-staged",
-    "prepare": "husky install",
+    "prepare": "husky",
     "preinstall": "npx only-allow pnpm"
   },
   "engines": {
@@ -20,11 +20,12 @@
     "pnpm": ">=8.14.0"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.1",
     "@nuxt/image": "^1.3.0",
     "@nuxt/ui": "^2.12.3",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/google-fonts": "^3.1.3",
-    "@nuxtjs/supabase": "^1.1.5",
+    "@nuxtjs/supabase": "^1.1.6",
     "@pinia/nuxt": "^0.5.1",
     "dayjs": "^1.11.10",
     "vue": "^3.4.15",
@@ -32,21 +33,21 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.11.5",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
+    "@types/node": "^20.11.8",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "eslint": "^8.56.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.20.1",
-    "husky": "^8.0.3",
+    "husky": "^9.0.6",
     "lint-staged": "^15.2.0",
     "nuxt": "^3.9.3",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "sass": "^1.70.0",
-    "vue-eslint-parser": "^9.4.0"
+    "vue-eslint-parser": "^9.4.2"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,vue}": [
