--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "fun-km",
+  "description": "A multi-person collaborative knowledge base system that supports multi-tenants",
   "packageManager": "pnpm@8.14.3",
   "private": true,
   "type": "module",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.1",
+    "@iconify-json/grommet-icons": "^1.1.10",
     "@nuxt/image": "^1.3.0",
     "@nuxt/ui": "^2.12.3",
     "@nuxtjs/eslint-module": "^4.1.0",
@@ -33,6 +35,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@nuxtjs/seo": "2.0.0-rc.5",
     "@types/node": "^20.11.8",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
