--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint:eslint": "eslint --ext .js,.ts,.vue,.jsx,.tsx .",
-    "lint:prettier": "prettier --write --loglevel warn \"**/*.{js,ts,json,jsx,tsx,css,less,scss,vue,html,md}\"",
+    "lint:prettier": "prettier --write --log-level warn \"**/*.{js,ts,json,jsx,tsx,css,less,scss,vue,html,md}\"",
     "lint:lint-staged": "lint-staged",
     "prepare": "husky",
     "preinstall": "npx only-allow pnpm"
@@ -24,7 +24,7 @@
     "@formkit/auto-animate": "^0.8.1",
     "@iconify-json/grommet-icons": "^1.1.10",
     "@nuxt/image": "^1.3.0",
-    "@nuxt/ui": "^2.12.3",
+    "@nuxt/ui": "^2.13.0",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/supabase": "^1.1.6",
@@ -36,16 +36,16 @@
   },
   "devDependencies": {
     "@nuxtjs/seo": "2.0.0-rc.5",
-    "@types/node": "^20.11.8",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
+    "@types/node": "^20.11.15",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "eslint": "^8.56.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-vue": "^9.20.1",
-    "husky": "^9.0.6",
-    "lint-staged": "^15.2.0",
+    "eslint-plugin-vue": "^9.21.1",
+    "husky": "^9.0.7",
+    "lint-staged": "^15.2.1",
     "nuxt": "^3.9.3",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
