--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/supabase": "^1.1.6",
     "@pinia/nuxt": "^0.5.1",
+    "@vercel/analytics": "^1.1.2",
+    "@vercel/speed-insights": "^1.0.9",
     "dayjs": "^1.11.10",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
