feat: optimize registration and initialization workbench logic

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # 应用名称
 NUXT_PUBLIC_SITE_NAME="FUN_KM知识库"
-# 应用部署地址（SEO使用）
+# 应用部署地址
 NUXT_PUBLIC_SITE_URL="https://fun-km.vercel.app"
 # supabase
 NUXT_PUBLIC_SUPABASE_URL="http://192.168.3.6:8000"
@@ -9,4 +9,4 @@ NUXT_SUPABASE_SERVICE_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.ewogICJyb2xlIjog
 # 登录后跳转地址
 NUXT_PUBLIC_LOGIN_REDIRECT="/dashboard"
 # 校验路由白名单
-NUXT_ROUTE_WHITE_LIST="/login,/register,/about,/"
+NUXT_ROUTE_WHITE_LIST="/login,/register,/about,/,/redirect/sign-up/confirm"
