--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@vercel/analytics": "^1.1.2",
     "@vercel/speed-insights": "^1.0.9",
     "dayjs": "^1.11.10",
+    "v-calendar": "^3.1.2",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
     "zod": "^3.22.4"
