--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fun-km",
   "description": "A multi-person collaborative knowledge base system that supports multi-tenants",
   "packageManager": "pnpm@8.14.3",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -24,7 +25,7 @@
     "@formkit/auto-animate": "^0.8.1",
     "@iconify-json/grommet-icons": "^1.1.10",
     "@nuxt/image": "^1.3.0",
-    "@nuxt/ui": "^2.14.0",
+    "@nuxt/ui": "^2.14.1",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/supabase": "^1.1.6",
@@ -39,14 +40,14 @@
   },
   "devDependencies": {
     "@nuxtjs/seo": "2.0.0-rc.8",
-    "@types/node": "^20.11.19",
+    "@types/node": "^20.11.20",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-vue": "^9.21.1",
+    "eslint-plugin-vue": "^9.22.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "nuxt": "^3.10.3",
